SeveraL Minor improvements
- Handling of unused parameters with TRICE_OFF=1 improved.
- Typos corrected
- common demoTIL.json and demoLI.json for all examples and tests
- separate buildAllTargets scripts for TRICE_OFF=0|1
- Some shell scripts improved / renamed
- CLI switch -liPath relative now with path option
- Verbose log output for trice insert improved

--- a/examples/G0B1_inst/Makefile
+++ b/examples/G0B1_inst/Makefile
@@ -1,6 +1,6 @@
-# main.mak
+# Makefile
 
-BUILDFILES = build.sh OS_Darwin.mak OS_Linux.mak OS_Windows.mak main.mak mcu.mak flags.mak gcc0.mak gcc1.mak clang0.mak clang1.mak
+BUILDFILES = build.sh OS_Darwin.mak OS_Linux.mak OS_Windows.mak Makefile mcu.mak flags.mak gcc0.mak gcc1.mak clang0.mak clang1.mak
 VERBOSE = # -v
 
 ######################################
