--- a/examples/G0B1_inst/.vscode/launch.json
+++ b/examples/G0B1_inst/.vscode/launch.json
@@ -4,19 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "clang Cortex Debug",
-            "cwd": "${workspaceFolder}",
-            "executable": "./out.clang/G0B1.elf",
-            "request": "launch",
-            "type": "cortex-debug",
-            "runToEntryPoint": "main",
-            "servertype": "jlink",
-            "interface": "swd",
-            "device": "STM32G0B1RE",
-            "svdFile": "./STM32G0B1.svd",
-            "showDevDebugOutput": "raw"
-        },
+        //{
+        //    "name": "clang Cortex Debug",
+        //    "cwd": "${workspaceFolder}",
+        //    "executable": "./out.clang/G0B1.elf",
+        //    "request": "launch",
+        //    "type": "cortex-debug",
+        //    "runToEntryPoint": "main",
+        //    "servertype": "jlink",
+        //    "interface": "swd",
+        //    "device": "STM32G0B1RE",
+        //    "svdFile": "./STM32G0B1.svd",
+        //    "showDevDebugOutput": "raw"
+        //},
         {
             "name": "gcc Cortex Debug",
             "cwd": "${workspaceFolder}",
