testAll.sh checks first for tool existence and has a (default) quick mode now. Also clang translation is included partially.

--- a/examples/G0B1_inst/Makefile
+++ b/examples/G0B1_inst/Makefile
@@ -1,5 +1,11 @@
 # Makefile
 
+# Put ARM Clang first in path temporary to avoid compiler variants issues.
+#export PATH := C:\bin\ArmClang\bin:$(PATH)
+
+# ARM Clang uses the ARM GNU toolchain libraries and finds them over C_INCLUDE_PATH.
+export C_INCLUDE_PATH := C:\bin\ArmGNUToolchain\arm-none-eabi\include
+
 BUILDFILES = build.sh Makefile mcu.mak flags.mak gcc0.mak gcc1.mak clang0.mak clang1.mak
 VERBOSE = # -v
 
