--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -256,6 +256,27 @@
             ]
         },
         {
+            "name": "trice l -p HEX",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["log",
+                     "-v",
+                     "-port",
+                     "HEX",
+                     "-args",
+                     "ca f2 bd a1 56 68 c0 04 ed dd 0a 00",
+                     "-idlist",
+                     "${workspaceFolder}/demoTIL.json",
+                     "-li",
+                     "${workspaceFolder}/demoLI.json",
+                     "-pf=none",
+                     "-d16"
+            ]
+        },
+        {
             "name": "trice l -p DUMP -pf none",
             "type": "go",
             "request": "launch",
