adapted trice l -p HEX

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -267,7 +267,9 @@
                      "-port",
                      "HEX",
                      "-args",
-                     "ca f2 bd a1 56 68 c0 04 ed dd 0a 00",
+                     "ee 4e c0 04 ed dd 0a 00",
+                     "-showID",
+                     "deb:%5d",
                      "-idlist",
                      "${workspaceFolder}/demoTIL.json",
                      "-li",
