--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -22,7 +22,7 @@ builds:
 
     # Path to main.go file or main package.
     # Default is `.`.
-    main: ./cmd/trice/.
+    main: ./cmd/trice
  
     # Binary name.
     # Can be a path (e.g. `bin/app`) to wrap the binary in a directory.
@@ -33,31 +33,34 @@ builds:
     # For more info refer to: https://golang.org/doc/install/source#environment
   #- env:
   #    - CGO_ENABLED=0
-    goos:
-      - windows
-      - linux
-      - darwin
+    goos: [ windows, linux, darwin ]
 
     # GOARCH to build for.
     # For more info refer to: https://golang.org/doc/install/source#environment
     # Defaults are 386 and amd64.
-    goarch:
-      - 386
-      - amd64
-      - arm # build error on server?
-      - arm64 # build error on server?
+    goarch: [ 386, amd64, arm, arm64 ]
 
     # GOARM to build for when GOARCH is arm.
     # For more info refer to: https://golang.org/doc/install/source#environment
     # Default is only 6.
-    goarm:
-      - 6
-      - 7
+    goarm: [ 6, 7 ]
 
     # Custom environment variables to be set during the builds.
     # Default is empty.
     env:
       - CGO_ENABLED=0
+    
+    # You don't need to set this because GoReleaser sets the three ldflags by default anyway.
+    # But sometimes it's better to be explicit, especially if you want to expand later (e.g., builtBy):
+    ldflags:
+      - >-
+        -s -w
+        -X main.version={{ .Version }}
+        -X main.commit={{ .Commit }}
+        -X main.date={{ .Date }}
+        -X main.builtBy=goreleaser
+    # Of course, you would then have to add main.builtBy as a variable in main.go if you want to use it.
+
 archives:
   - 
     #rlcp: true
@@ -87,7 +90,8 @@ archives:
     # If format is `binary`, no archives are created and the binaries are instead
     # uploaded directly.
     # Default is `tar.gz`.
-    formats: tar.gz
+    formats:
+      - tar.gz
     
     # use zip for windows archives
     # Can be used to change the archive formats for specific GOOSs.
@@ -96,32 +100,78 @@ archives:
     format_overrides:
     - goos: windows
       formats: [ 'zip' ]
+
     # Additional files/globs you want to add to the archive.
     # Defaults are any files matching `LICENCE*`, `LICENSE*`,
     # `README*` and `CHANGELOG*` (case-insensitive).
+    # This list excludes the Go sources and git related files but includes the target source code.
     files:
+      - "**/*.json"
+      - "**/*.md"
+      - "**/*.jpg"
+    # - "**/*.JPG"
+    # - "**/*.jpeg"
+    # - "**/*.JPEG"
+      - "**/*.png"
+      - "**/*.PNG"
+      - "**/*.gif"
+    # - "**/*.GIF"
+      - "**/*.svg"
+    # - "**/*.SVG"
+      - "**/*.html"
+      - "**/*.pdf"
+      - "**/*.zip"
+      - _test/**/*.c
+      - _test/**/*.h
+      - _test/**/*.go
+    # - .code_snippets/*
+    # - .github/*
+    # - .idea/*
+    # - cmd/*
+    # - dist/*
+      - examples/**/*.sh
+      - examples/**/*.c
+      - examples/**/*.h
+      - examples/**/*.s
+      - examples/**/*.ld
+      - examples/**/*.svd
+      - examples/**/*.mak
+      - examples/**/Makefile
+      - examples/**/Makefile.*
+      - examples/**/*.ioc
+      - examples/**/*.txt
+      - examples/**/*.code-workspace
+      - examples/**/*.jflash
+      - examples/**/*.cfg
+    # - internal/*
+    # - pkg/*
+      - src/*.c
+      - src/*.h
+    # - super-linter.report
+      - _config.yml
       - .clang-format
       - .clang-format-ignore
       - .editorconfig
-      - .gitattributes
-      - .gitignore
+    # - .gitattributes
+    # - .gitignore
       - .goreleaser.yaml
       - .travis.yml
-      - .vscode/*
-      - _config.yml
-      - cmd/trice/*
-      - docs/*
-      - examples/*
-      - internal/*
-      - pkg/*
-      - src/*
-      - third_party/*
-      - _test/*
-      - ./*.sh
-      - ./*.md
-      - go.mod
-      - go.sum
-      - super-linter.report/*
+      - build_environment.sh
+    # - build.sh
+      - clang-format.sh
+    # - clean-dsstore.sh
+    # - gitAddWorktreeFromGitLogLineData.sh
+    # - gitAddWorktreesBetween.sh
+    # - gitLogWithBranches.sh
+    # - go.mod
+    # - go.sum
+      - renewIDs_in_examples_and_refresh_test_folder.sh
+      - testAll.log
+    # - testAll.sh
+      - trice_cleanIDs_in_examples_and_test_folder.sh
+      - trice_environment.sh
+      - trice_insertIDs_in_examples_and_test_folder.sh
+
 checksum:
   # You can change the name of the checksums file.
   # Default is `{{ .ProjectName }}_{{ .Version }}_checksums.txt`.
@@ -131,6 +181,7 @@ checksum:
   # Accepted options are sha256, sha512, sha1, crc32, md5, sha224 and sha384.
   # Default is sha256.
   #algorithm: sha256
+
 snapshot:
   # Allows you to change the name of the generated snapshot
   #
