issue #567 solved. SEGGER_RTT settings now checked as well

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "trice_test.h": "c",
         "triceCheckTestpattern.C": "cpp",
         "cobs.h": "c",
-        "segger_rtt_conf.h": "c"
+        "segger_rtt_conf.h": "c",
+        "segger_rtt.h": "c"
     },
     "cSpell.words": [
         "CFLAGS",
