--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,66 +1,56 @@
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-#
-# ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
-# the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
-#
 name: "CodeQL"
 
 on:
   push:
-    branches: [ $default-branch, $protected-branches ]
+    # Run CodeQL on pushes to main (adapt if your default branch is different)
+    branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ $default-branch ]
+    # Analyze pull requests targeting main
+    branches: [ "main" ]
+  # Allow manual runs from the GitHub Actions UI
   workflow_dispatch:
 
 jobs:
   analyze:
-    name: Analyze
+    name: Analyze (CodeQL)
     runs-on: ubuntu-latest
 
+    # We explicitly tell CodeQL which languages to analyze.
+    # For Trice, we have:
+    #   - Go code           -> language: "go"
+    #   - C sources/headers -> language: "cpp" (covers C/C++)
     strategy:
       fail-fast: false
       matrix:
-        language: [ $detected-codeql-languages ]
-        # CodeQL supports [ $supported-codeql-languages ]
-        # Learn more:
-        # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
+        language: [ "go", "cpp" ]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      # Checkout the repository so CodeQL can see the source code.
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
-        # If you wish to specify custom queries, you can do so here or in a config file.
-        # By default, queries listed here will override any specified in a config file.
-        # Prefix the list here with "+" to use these queries and those in the config file.
-        # queries: ./path/to/local/query, your-org/your-repo/queries@main
+      # Initialize the CodeQL tools for the selected language.
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          # Use the current matrix language (go or cpp).
+          languages: ${{ matrix.language }}
+          # Optional: specify custom queries or query packs here if needed.
+          # queries: security-and-quality
 
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+      # Autobuild step:
+      # - For "go", CodeQL does not strictly need a traditional build; it can
+      #   analyze the source directly.
+      # - For "cpp", CodeQL tries to automatically build the project to
+      #   understand the compiled artifacts (C/C++ code).
+      #
+      # If autobuild fails for your C parts, you may need to:
+      #   - remove this step, and
+      #   - add a manual build step (e.g. make, cmake, etc.).
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
 
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
-
-    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
-    #    and modify them (or add more) to build your code if your project
-    #    uses a compiled language
-
-    #- run: |
-    #   make bootstrap
-    #   make release
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+      # Perform the actual CodeQL analysis and upload the results to GitHub.
+      # Results show up under the "Security" -> "Code scanning alerts" tab.
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
